welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:8: error: ';' expected but 'if' found.
	}if (bSmile == false){
         ^